[package]
name = "crosvm_plugin"
version = "0.17.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
kvm = { path = "../kvm" }
kvm_sys = { path = "../kvm_sys" }
libc = "*"
plugin_proto = { path = "../plugin_proto" }
protobuf = "2.3"
sys_util = { path = "../sys_util" }
