[package]
name = "crosvm_plugin"
version = "0.17.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
stats = []

[lib]
crate-type = ["cdylib"]

[dependencies]
kvm = { workspace = true }
kvm_sys = { workspace = true }
libc = { workspace = true }
protobuf = "3.2"
protos = { workspace = true, features = ["plugin"] }
base = { workspace = true }
