[package]
name = "devices"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
arc_quota = ["dbus", "protobuf", "system_api"]
audio = []
audio_cras = ["libcras"]
balloon = []
gpu = ["gpu_display"]
gunyah = []
libvda-stub = ["libvda/libvda-stub"]
net = []
geniezone = []
usb = []
vaapi = ["cros-codecs/vaapi", "crc32fast"]
video-decoder = []
video-encoder = []
minigbm = ["rutabaga_gfx/minigbm"]
x = ["gpu_display/x", "rutabaga_gfx/x"]
virgl_renderer = ["gpu", "rutabaga_gfx/virgl_renderer"]
vtpm = ["system_api", "protobuf", "dbus"]
gfxstream = ["gpu", "rutabaga_gfx/gfxstream"]
registered_events = []
slirp = ["net_util/slirp"]
stats = []
seccomp_trace = []
swap = ["swap/enable"]
whpx = []
pci-hotplug = []
noncoherent-dma = []

[dependencies]
argh = "0.1.7"
async-task = "4"
acpi_tables = {path = "../acpi_tables" }
anyhow = "*"
async-trait = "0.1.36"
audio_streams = "*"
audio_util = { path = "../audio_util" }
balloon_control = { path = "../common/balloon_control" }
base = { path = "../base" }
bit_field = { path = "../bit_field" }
cfg-if = "1.0.0"
chrono = { version = "0.4.34", features = [ "serde", "now" ], default-features = false }
crc32fast = { version = "1.2.1", optional = true }
cros_async = { path = "../cros_async" }
cros-codecs = { version = "0.0.4", optional = true }
crosvm_cli = { path = "../crosvm_cli" }
data_model = { path = "../common/data_model" }
dbus = { version = "0.9.7", features = ["stdfd"], optional = true }
disk = { path = "../disk" }
downcast-rs = "1.2.0"
enumn = "0.1.0"
ffmpeg = { path = "../media/ffmpeg", optional = true }
gpu_display = { path = "../gpu_display", optional = true }
rutabaga_gfx = { path = "../rutabaga_gfx" }
hypervisor = { path = "../hypervisor" }
kvm_sys = { path = "../kvm_sys" }
libc = "*"
libvda = { path = "../media/libvda", optional = true }
linux_input_sys = { path = "../linux_input_sys" }
memoffset = { version = "0.6" }
net_util = { path = "../net_util" }
num-traits = "0.2"
once_cell = "1.7.2"
power_monitor = { path = "../power_monitor" }
protobuf = { version = "3.2", optional = true }
protos = { path = "../protos", optional = true }
rand = "0.8"
remain = "*"
resources = { path = "../resources" }
serde = { version = "1", features = [ "derive", "rc" ] }
serde_json = "1"
serde_keyvalue = { path = "../serde_keyvalue", features = ["argh_derive"] }
smallvec = "1.6.1"
sync = { path = "../common/sync" }
system_api = { path = "../system_api", optional = true }
thiserror = "1.0.20"
cros_tracing = { path = "../cros_tracing" }
swap = { path = "../swap" }
vmm_vhost = { path = "../third_party/vmm_vhost" }
virtio_sys = { path = "../virtio_sys" }
vm_control = { path = "../vm_control" }
vm_memory = { path = "../vm_memory" }
zerocopy = { version = "0.7", features = ["derive"] }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
fuse = {path = "../fuse" }
libcras = { version = "*", optional = true }
minijail = "*"
net_sys = { path = "../net_sys" }
p9 = "*"
usb_util = { path = "../usb_util" }
vfio_sys = { path = "../vfio_sys" }
vhost = { path = "../vhost" }

[target.'cfg(windows)'.dependencies]
broker_ipc = { path = "../broker_ipc" }
metrics = { path = "../metrics" }
tube_transporter = { path = "../tube_transporter" }
win_audio = { path = "../win_audio"}
win_util = { path = "../win_util"}
winapi = "*"

[dependencies.futures]
version = "*"
features = ["async-await", "std"]
default-features = false

[dev-dependencies]
bytes = "1.1.0"
crc32fast = "1"
libtest-mimic = "0.6"
named-lock = "0.3"
tempfile = "3"
