[package]
name = "disk"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[lib]
path = "src/disk.rs"

[features]
android-sparse = []
composite-disk = ["crc32fast", "protos", "protobuf", "uuid"]
qcow = []

[dependencies]
async-trait = "*"
base = { path = "../base" }
cfg-if = "1.0.0"
crc32fast = { version = "1.2.1", optional = true }
cros_async = { path = "../cros_async" }
data_model = { path = "../common/data_model" }
libc = "*"
protobuf = { version = "3.2", optional = true }
protos = { path = "../protos", features = ["composite-disk"], optional = true }
remain = "*"
serde = { version = "1", features = [ "derive" ] }
sync = { path = "../common/sync" }
thiserror = "*"
tempfile = "3"
uuid = { version = "1", features = ["v4"], optional = true }
vm_memory = { path = "../vm_memory" }
zerocopy = "0.6"

[dependencies.futures]
version = "*"
default-features = false
