[package]
name = "disk"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[lib]
path = "src/disk.rs"

[features]
android-sparse = []
composite-disk = ["crc32fast", "protos", "protobuf", "uuid"]
qcow = []

[dependencies]
async-trait = "0.1.36"
base = { path = "../base" }
cfg-if = "1.0.0"
crc32fast = { version = "1.2.1", optional = true }
cros_async = { path = "../cros_async" }
data_model = { path = "../common/data_model" }
libc = "0.2"
protobuf = { version = "3.2", optional = true }
protos = { path = "../protos", features = ["composite-disk"], optional = true }
remain = "0.2"
serde = { version = "1", features = [ "derive" ] }
sync = { path = "../common/sync" }
thiserror = "1"
uuid = { version = "1", features = ["v4"], optional = true }
vm_memory = { path = "../vm_memory" }
zerocopy = { version = "0.7", features = ["derive"] }

[dependencies.futures]
version = "0.3"
default-features = false

[dev-dependencies]
tempfile = "3"
