[package]
name = "disk"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[lib]
path = "src/disk.rs"

[features]
android-sparse = []
composite-disk = ["crc32fast", "protos", "protobuf", "uuid"]
qcow = []
zstd-disk = ["zstd"]

[dependencies]
anyhow = "1"
async-trait = "0.1.36"
base = { workspace = true }
cfg-if = "1.0.0"
crc32fast = { version = "1.2.1", optional = true }
cros_async = { workspace = true }
data_model = { workspace = true }
libc = { workspace = true }
protobuf = { version = "3.2", optional = true }
protos = { workspace = true, features = ["composite-disk"], optional = true }
remain = "0.2"
serde = { version = "1", features = ["derive"] }
sync = { workspace = true }
thiserror = "1"
uuid = { version = "1", features = ["v4"], optional = true }
vm_memory = { workspace = true }
zerocopy = { version = "0.8.13", features = ["derive"] }
zstd = { version = "0.13", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dependencies.futures]
version = "0.3"
default-features = false

[dev-dependencies]
tempfile = "3"
