[package]
name = "ext2"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[dependencies]
anyhow = "1"
base = { path = "../base/" }
enumn = "0.1"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
zerocopy = { version = "0.8.13", features = ["derive"] }

[[example]]
name = "mkfs"

[dev-dependencies]
argh = "0.1"
tempfile = "3"
walkdir = "2.3"
