[package]
name = "crosvm-fuzz"
version = "0.0.1"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
cros_fuzz = "*"
data_model = { path = "../data_model" }
devices = { path = "../devices" }
kernel_loader = { path = "../kernel_loader" }
libc = "*"
qcow = { path = "../qcow" }
rand = "0.6"
sys_util = { path = "../sys_util" }
usb_util = { path = "../usb_util" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "crosvm_block_fuzzer"
path = "block_fuzzer.rs"

[[bin]]
name = "crosvm_fs_server_fuzzer"
path = "fs_server_fuzzer.rs"

[[bin]]
name = "crosvm_qcow_fuzzer"
path = "qcow_fuzzer.rs"

[[bin]]
name = "crosvm_usb_descriptor_fuzzer"
path = "usb_descriptor_fuzzer.rs"

[[bin]]
name = "crosvm_virtqueue_fuzzer"
path = "virtqueue_fuzzer.rs"

[[bin]]
name = "crosvm_zimage_fuzzer"
path = "zimage_fuzzer.rs"
