[package]
name = "gpu_display"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
x = []
kiwi = []
vulkan_display = [ "vulkano", "ash", "rand", "protos", "protobuf", "euclid", "smallvec"]
# Enables the GPU display backend for Android. The backend uses Android surface as the backing
# store.
android_display = []
# Stub implementation of the Android display backend. This is only used for building and testing the
# Android display backend on a non-Android target
android_display_stub = []

[dependencies]
anyhow = "1"
libc = "0.2"
base = { path = "../base" }
linux_input_sys = { path = "../linux_input_sys" }
remain = "0.2"
thiserror = "1"
cfg-if = "1"
serde = { version = "1", features = [ "derive" ] }
vm_control = { path = "../vm_control", features = ["gpu"] }
zerocopy = { version = "0.7", features = ["derive"] }
vulkano = { version = "0.31.1", optional = true }
ash = { version = "0.37.0", optional = true }
rand = { version = "0.8.5", optional = true }
protos = { path = "../protos", optional = true }
protobuf = { version = "3.2", optional = true }
euclid = { version = "0.22", optional = true }
smallvec = { version = "1", optional = true }
sync = { path = "../common/sync" }

[target.'cfg(windows)'.dependencies]
cros_tracing = { path = "../cros_tracing" }
metrics = { path = "../metrics" }
num-traits = "0.2"
winapi = "0.3"
win_util = { path = "../win_util" }
smallvec = "1"
sync = { path = "../common/sync" }
euclid = "0.22"

[build-dependencies]
cc = "1.0.25"
pkg-config = "0.3.11"
cfg-if = "1.0.0"
which = "4"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "simple_open"
path = "examples/simple_open.rs"
required-features = ["x"]
