[package]
name = "io_uring"
version = "0.1.1"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[dependencies]
libc = { workspace = true }
remain = { workspace = true }
sync = { workspace = true }
base = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"


