[package]
name = "jail"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
seccomp_trace = []

[dependencies]
anyhow = "1"
base = { path = "../base" }
libc = "0.2"
once_cell = "1.7"
serde = "1"
serde_keyvalue = { path = "../serde_keyvalue", features = ["argh_derive"] }
static_assertions = "1.1"
zerocopy = { version = "0.7", features = ["derive"] }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
minijail = "*"

[build-dependencies]
which = "4"
rayon = "1.5.3"

[dev-dependencies]
cfg-if = "1"
