[package]
name = "jail"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

# The process tests will use fork, which requires a custom test harness to enforce single threaded
# execution.
[[test]]
name = "fork"
path = "tests/fork.rs"
harness = false

[features]
seccomp_trace = []

[dependencies]
anyhow = { workspace = true }
base = { workspace = true }
libc = { workspace = true }
log = "0.4"
serde = { workspace = true }
serde_keyvalue = { workspace = true, features = ["argh_derive"] }
static_assertions = { workspace = true }
zerocopy = { version = "0.8.13", features = ["derive"] }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
minijail = "*"

[build-dependencies]
which = "4"
rayon = "1.5.3"

[dev-dependencies]
cfg-if = { workspace = true }
libtest-mimic = "0.6"
