[package]
name = "kernel_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
data_model = { path = "../common/data_model" }
libc = "*"
base = { path = "../base" }
lz4_flex = "0.11"
remain = "*"
resources = { path = "../resources" }
thiserror = "*"
vm_memory = { path = "../vm_memory" }
zerocopy = { version = "0.7", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
