[package]
name = "kernel_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
data_model = { workspace = true }
libc = { workspace = true }
base = { workspace = true }
lz4_flex = "0.11"
remain = { workspace = true }
resources = { workspace = true }
thiserror = { workspace = true }
vm_memory = { workspace = true }
zerocopy = { version = "0.8.13", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
