[package]
name = "kvm"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[dependencies]
data_model = { path = "../common/data_model" }
kvm_sys = { path = "../kvm_sys" }
libc = { workspace = true }
base = { workspace = true }
static_assertions = "1.1"
sync = { path = "../common/sync" }
vm_memory = { path = "../vm_memory" }
zerocopy = { version = "0.8.13", features = ["derive"] }
