[package]
name = "kvm"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[dependencies]
data_model = { workspace = true }
kvm_sys = { workspace = true }
libc = { workspace = true }
base = { workspace = true }
static_assertions = "1.1"
sync = { workspace = true }
vm_memory = { workspace = true }
zerocopy = { version = "0.8.13", features = ["derive"] }
